les06 dingen toevoegen

--- a/les5-silver-bullet-adventure/style.css
+++ b/les5-silver-bullet-adventure/style.css
@@ -13,3 +13,32 @@
 	grid-template-columns: auto auto;
 	border: inset 2px gray;
 }
+
+#myInteraction {
+	padding: 10px;
+}
+
+#mapImage {
+	max-width: 100%;
+	height: auto;
+	margin-top: 20px;
+}
+
+nav button {
+	background-color: green;
+	color: white;
+	font-size: 16px;
+	padding: 10px;
+}
+
+#knopNoord,
+#knopZuid {
+	display: block;
+	width: 300px;
+}
+
+#knopWest,
+#knopOost {
+	display: inline-block;
+	width: 150px;
+}
